--- a/assets/src/style/my.scss
+++ b/assets/src/style/my.scss
@@ -1,12 +1,32 @@
 body {
 	max-width: 1920px;
+	background-color: #e0dccb;
+//	font-family: 'Alice', serif;
+//	font-family: 'Prata', serif;
+//	font-family: 'Alegreya SC', serif;
+	font-family: 'Ledger', serif;
 }
-aside{
+
+.container-fluid {
+	background-image: url(../img/bg-img.png);
+}
+
+aside {
 	height: 490px;
 }
 
 .red-text {
 	color: #d12f22;
+}
+
+.block-bg-color {
+	background-color: rgba(0, 0, 0, .5);
+}
+
+.logo-img {
+	max-height: 130px;
+	margin-top: -16px;
+	margin-bottom: -14px;
 }
 
 .white-text {
@@ -32,16 +52,17 @@ aside{
 	color: #fff;
 	padding: 10px;
 }
-.tile:hover{
+
+.tile:hover {
 	text-decoration: underline;
 	color: #fff;
 }
 
 
 .tile p,
-.tile h2 {
-}
-.bg-shadow{
+.tile h2 {}
+
+.bg-shadow {
 	background-color: rgba(0, 0, 0, .6);
 }
 
@@ -56,22 +77,27 @@ aside{
 	background-image: url(../img/doors-and-windows.jpg);
 	height: 240px;
 }
-.used-materials{
+
+.used-materials {
 	height: 240px;
 }
+
 .marketing {
 	background-image: url(../img/marketing.jpg);
 	background-repeat: no-repeat;
 	height: 490px;
 	background-position: 0 0;
 }
+
 .internal {
 	height: 240px;
 }
-.wrapper-blackout{
+
+.wrapper-blackout {
 	width: 100%;
 	height: 100%;
 }
-.wrapper-blackout:hover{
+
+.wrapper-blackout:hover {
 	background-color: rgba(0, 0, 0, .6);
 }
