--- a/assets/src/template/header.html
+++ b/assets/src/template/header.html
@@ -1,8 +1,8 @@
 <header>
 	<div class="row">
 		<div class="col-md-12">
-			<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-				<a class="navbar-brand" href="index.html">Трансформъ Плюс</a>
+			<nav class="navbar navbar-expand-lg navbar-dark block-bg-color">
+				<a class="navbar-brand" href="index.html"><img class="logo-img" src="../img/logo.png" alt="Трансформъ Плюс"></a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
