--- a/assets/src/template/header.html
+++ b/assets/src/template/header.html
@@ -1,8 +1,52 @@
-<header>
+<header class="block-bg-color">
 	<div class="row">
+		<div class="col-md-5">
+			<a href="contacts.html">
+				<div class="adress m-3 pl-5 d-none d-md-block">
+
+					<div class="city white-text">
+						Краснодар
+					</div>
+					<div class="street white-text">
+						ул.Кожевенная 18
+					</div>
+
+				</div>
+			</a>
+			<div class="email d-none d-md-block"><span class="white-text">transform.krr</span><span class="red-text">@yandex.ru</span></div>
+			<div class="email d-none d-md-block"><span class="white-text">transform.krr</span><span class="red-text">@gmail.com</span></div>
+		</div>
+		<div class="col-md-2 text-center">
+			<a class=" " href="index.html"><img class="logo-img" src="../img/logo.png" alt="Трансформъ Плюс"></a>
+		</div>
+		<div class="col-md-5 text-right">
+			<div class="text-center text-md-right">
+				<div class="p-md-1 pt-4">
+					<a href="+79186884442"><span class="red-text">+7 (918)</span> <span class="white-text">688-44-42</span>
+			</a></div>
+				<div class="p-md-1 d-none d-md-block">
+					<a href="+78612980898"><span class="red-text">+7 (861) </span> <span class="white-text">298-08-98</span>
+			</a></div>
+				<div class="p-md-1 d-none d-md-block">
+					<a href="+78612980880"><span class="red-text">+7 (861)</span> <span class="white-text">298-08-80</span>
+			</a></div>
+			<div class="mobile-bitton-onmap d-inline-block d-md-none my-2"><a class="btn btn-danger" href="contacts.html">Мы на карте</a></div>
+			</div>
+			<!--
+			<div class="phone-number phone-number-1">
+				<a href="+79186884442"><span class="red-text">+7 (918)</span> <span class="white-text">688-44-42</span></a>
+			</div>
+			<div class="phone-number phone-number-2">
+				<a href="+78612980898"><span class="red-text">+7 (861) </span> <span class="white-text">298-08-98</span></a>
+			</div>
+			<div class="phone-number phone-number-3">
+				<a href="+78612980880"><span class="red-text">+7 (861)</span> <span class="white-text">298-08-80</span></a>
+			</div>
+-->
+		</div>
 		<div class="col-md-12">
-			<nav class="navbar navbar-expand-lg navbar-dark block-bg-color">
-				<a class="navbar-brand" href="index.html"><img class="logo-img" src="../img/logo.png" alt="Трансформъ Плюс"></a>
+			<nav class="navbar navbar-expand-lg navbar-dark">
+
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -32,45 +76,10 @@
 							<a class="nav-link" href="#">Контакты</a>
 						</li>
 					</ul>
-					<span class="navbar-text phone-number">   <span class="red-text">+7 (918)</span> <span class="white-text">688-44-42</span> </span>
+					<span class="navbar-text phone-number">    </span>
 				</div>
 			</nav>
 		</div>
-		<div class="col-md-12">
-			<div id="carouselExampleControls" class="carousel slide my-1" data-ride="carousel">
-				<div class="carousel-inner">
-					<div class="carousel-item active">
-						<img class="d-block w-100" src="img/carousel-1.jpg" alt="First slide">
-						<div class="carousel-caption d-none d-md-block">
-							<h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores vero architecto officia enim ipsum soluta, officiis, earum molestias assumenda expedita est. Illo, necessitatibus, itaque praesentium vel id est dicta animi!</h5>
-							<p></p>
-						</div>
-					</div>
-					<div class="carousel-item">
-						<img class="d-block w-100" src="img/carousel-4.jpg" alt="Second slide">
-						<div class="carousel-caption d-none d-md-block">
-							<h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi minus, tempore fugit quia itaque aliquam autem rerum distinctio debitis earum, consequatur amet nostrum. Perferendis vitae placeat cum nihil. Excepturi, impedit.</h5>
-							<p></p>
-						</div>
-					</div>
-					<div class="carousel-item">
-						<img class="d-block w-100" src="img/carousel-3.jpg" alt="Third slide">
-						<div class="carousel-caption d-none d-md-block">
-							<h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde illum magni voluptates rerum, dignissimos laboriosam iusto possimus sapiente. Laboriosam laudantium mollitia dolorem recusandae dolorum consequuntur voluptatum reiciendis quae officiis quam!</h5>
-							<p></p>
-						</div>
 
-					</div>
-				</div>
-				<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-				<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-			</div>
-		</div>
 	</div>
 </header>
