--- a/assets/src/template/header.html
+++ b/assets/src/template/header.html
@@ -10,11 +10,12 @@
 					<div class="street white-text">
 						ул.Кожевенная 18
 					</div>
-
 				</div>
 			</a>
-			<div class="email d-none d-md-block"><span class="white-text">transform.krr</span><span class="red-text">@yandex.ru</span></div>
-			<div class="email d-none d-md-block"><span class="white-text">transform.krr</span><span class="red-text">@gmail.com</span></div>
+			<div class="emails">
+				<div class="email d-none d-md-block"><span class="white-text">transform.krr</span><span class="red-text">@yandex.ru</span></div>
+				<div class="email d-none d-md-block"><span class="white-text">transform.krr</span><span class="red-text">@gmail.com</span></div>
+			</div>
 		</div>
 		<div class="col-md-2 text-center">
 			<a class=" " href="index.html"><img class="logo-img" src="../img/logo.png" alt="Трансформъ Плюс"></a>
@@ -30,19 +31,9 @@
 				<div class="p-md-1 d-none d-md-block">
 					<a href="+78612980880"><span class="red-text">+7 (861)</span> <span class="white-text">298-08-80</span>
 			</a></div>
-			<div class="mobile-bitton-onmap d-inline-block d-md-none my-2"><a class="btn btn-danger" href="contacts.html">Мы на карте</a></div>
+				<div class="mobile-bitton-onmap d-inline-block d-md-none my-2"><a class="btn btn-danger" href="contacts.html">Мы на карте</a></div>
 			</div>
-			<!--
-			<div class="phone-number phone-number-1">
-				<a href="+79186884442"><span class="red-text">+7 (918)</span> <span class="white-text">688-44-42</span></a>
-			</div>
-			<div class="phone-number phone-number-2">
-				<a href="+78612980898"><span class="red-text">+7 (861) </span> <span class="white-text">298-08-98</span></a>
-			</div>
-			<div class="phone-number phone-number-3">
-				<a href="+78612980880"><span class="red-text">+7 (861)</span> <span class="white-text">298-08-80</span></a>
-			</div>
--->
+
 		</div>
 		<div class="col-md-12">
 			<nav class="navbar navbar-expand-lg navbar-dark">
@@ -55,7 +46,7 @@
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Каталог</a>
 							<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-								<a class="dropdown-item" href="#">Внешняя отделка зданий</a>
+								<a class="dropdown-item" href="external_finish.html">Внешняя отделка зданий</a>
 								<a class="dropdown-item" href="#">Внутренняя отделка помещений</a>
 							</div>
 						</li>
