before I try to create card-component for all refs of website

--- a/assets/src/style/my.scss
+++ b/assets/src/style/my.scss
@@ -8,10 +8,12 @@ body {
 
 a {
 	text-decoration: none;
+	color: #000;
 }
 
 a:hover {
 	text-decoration: none;
+	color: #000;
 }
 
 .container-fluid {
@@ -132,39 +134,3 @@ aside {
 }
 
 //---------------------------------PAGE EXTERNAL-FINISH---------------------------------
-.cards{
-	min-height: 150px;
-}
-
-
-.card-1 {
-	background-image: url(../img/external_finish/2018-01-14_16-07-53.png);
-}
-
-.card-2 {
-	background-image: url(../img/external_finish/2018-01-14_16-09-51.png);
-}
-
-.card-3 {
-	background-image: url(../img/external_finish/2018-01-14_16-10-49.png);
-}
-
-.card-4 {
-	background-image: url(../img/external_finish/2018-01-14_16-11-33.png);
-}
-
-.card-5 {
-	background-image: url(../img/external_finish/2018-01-14_16-29-31.png);
-}
-
-.card-6 {
-	background-image: url(../img/external_finish/2018-01-14_16-30-43.png);
-}
-
-.card-7 {
-	background-image: url(../img/external_finish/2018-01-14_16-31-15.png);
-}
-
-.card-8 {
-	background-image: url(../img/external_finish/2018-01-14_16-32-07.png);
-}
