--- a/assets/src/style/my.scss
+++ b/assets/src/style/my.scss
@@ -76,7 +76,8 @@ aside {
 .card-01 {
 	background-image: url(../img/external.jpg);
 	background-repeat: no-repeat;
-	height: 490px;
+	height: 100%;
+	min-height: 240px;
 	background-position: 0 0;
 }
 
@@ -104,7 +105,8 @@ aside {
 .card-06 {
 	background-image: url(../img/marketing.jpg);
 	background-repeat: no-repeat;
-	height: 490px;
+	height: 100%;
+	min-height: 240px;
 	background-position: 0 0;
 }
 
@@ -132,4 +134,57 @@ aside {
 
 }
 
+
 //---------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+//------------------------------------------------------ЭЛЕМЕНТЫ ВНЕШНЕЙ ОТДЕЛКИ ЗДАНИЙ------------------------------------------------------------------------
+.card-ex-01 {
+	background-image: url(../img/external_finish/2018-01-14_16-07-53.png);
+}
+
+.card-ex-02 {
+	background-image: url(../img/external_finish/2018-01-14_16-09-51.png);
+}
+
+.card-ex-03 {
+	background-image: url(../img/external_finish/2018-01-14_16-10-49.png);
+}
+
+.card-ex-04 {
+	background-image: url(../img/external_finish/2018-01-14_16-11-33.png);
+}
+
+.card-ex-05 {
+	background-image: url(../img/external_finish/2018-01-14_16-29-31.png);
+}
+
+.card-ex-06 {
+	background-image: url(../img/external_finish/2018-01-14_16-30-43.png);
+}
+
+.card-ex-07 {
+	background-image: url(../img/external_finish/2018-01-14_16-31-15.png);
+}
+
+.card-ex-08 {
+	background-image: url(../img/external_finish/2018-01-14_16-32-07.png);
+}
+
+.card-ex-09 {
+	background-image: url(../img/external_finish/2018-01-14_22-34-01.png);
+}
+
+.card-ex-10 {
+	background-image: url(../img/external_finish/2018-01-14_22-35-13.png);
+}
+
+.card-ex {
+	height: 170px;
+	margin-bottom: 15px;
+	border-style: solid;
+	border-color: #676262;
+}
+
+.content-ex {
+	padding-left: 15px;
+	padding-right: 15px;
+}
