added all pages

--- a/assets/src/template/header.html
+++ b/assets/src/template/header.html
@@ -36,40 +36,8 @@
 
 		</div>
 		<div class="col-md-12">
-			<nav class="navbar navbar-expand-lg navbar-dark">
-
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-				<div class="collapse navbar-collapse" id="navbarText">
-					<ul class="navbar-nav mr-auto">
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Каталог</a>
-							<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-								<a class="dropdown-item" href="external_finish.html">Внешняя отделка зданий</a>
-								<a class="dropdown-item" href="#">Внутренняя отделка помещений</a>
-							</div>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Используемые материалы</a>
-						</li>
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Фотографии наших работ</a>
-							<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-								<a class="dropdown-item" href="#">Примеры наших работ</a>
-								<a class="dropdown-item" href="#">Примеры окон</a>
-								<a class="dropdown-item" href="#">Примеры блюстрад</a>
-								<a class="dropdown-item" href="#">Примеры негабаритных изделий рекламного назначения</a>
-							</div>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Контакты</a>
-						</li>
-					</ul>
-					<span class="navbar-text phone-number">    </span>
-				</div>
-			</nav>
+		//= nav.html
+			
 		</div>
 
 	</div>
