added aside on all pages

--- a/assets/src/template/aside.html
+++ b/assets/src/template/aside.html
@@ -1,5 +1,5 @@
-<aside class="text-center">
-	<h3 class="text-center">Примеры наших работ:</h3>
+<aside class="text-left">
+	<h3 class="text-left">Примеры наших работ:</h3>
 	<div>
 		<figure>
 			<figcaption></figcaption>
