--- a/assets/src/template/footer.html
+++ b/assets/src/template/footer.html
@@ -1,11 +1,22 @@
-<footer>
+<footer class="block-bg-color">
 	<div class="row">
-		<div class="col-md-6">
-			phone-number
+		<div class="col-md-4">
+			
+				<a class="btn btn-outline-light w-100 m-2" href="">Внешняя отделка зданий</a>
+				<a class="btn btn-outline-light w-100 m-2" href="">Внутренняя отделка зданий</a>
+				<a class="btn btn-outline-light w-100 m-2" href="">Используемые материалы</a>
+				<a class="btn btn-outline-light w-100 m-2" href="">Примеры наших работ</a>
+			
 		</div>
-		<div class="col-md-6">
-			logo
+		<div class="col-md-4">
+			
+				<a class="btn btn-outline-light w-100 m-2" href="">Примеры окон</a>
+				<a class="btn btn-outline-light w-100 m-2" href="">Примеры балюстрад</a>
+				<a class="btn btn-outline-light w-100 m-2" href="">Примеры негабаритных изделий рекламного назначения</a>
+		
+			
 		</div>
+		<div class="col-md-4"></div>
 
 	</div>
 </footer>
