--- a/assets/src/template/header.html
+++ b/assets/src/template/header.html
@@ -1,27 +1,29 @@
 <header class="block-bg-color">
 	<div class="row">
 		<div class="col-md-5">
-			<a href="contacts.html">
-				<div class="adress m-3 pl-5 d-none d-md-block">
-
-					<div class="city white-text">
-						Краснодар
+<div class="adress_and-email px-4">
+				<a href="contacts.html">
+					<div class="adress m-3 pl-5 d-none d-md-block">
+				
+						<div class="city white-text">
+							Краснодар
+						</div>
+						<div class="street white-text">
+							ул.Кожевенная 18
+						</div>
 					</div>
-					<div class="street white-text">
-						ул.Кожевенная 18
-					</div>
+				</a>
+				<div class="emails">
+					<div class="email d-none d-md-block"><span class="white-text">transform.krr</span><span class="red-text">@yandex.ru</span></div>
+					<div class="email d-none d-md-block"><span class="white-text">transform.krr</span><span class="red-text">@gmail.com</span></div>
 				</div>
-			</a>
-			<div class="emails">
-				<div class="email d-none d-md-block"><span class="white-text">transform.krr</span><span class="red-text">@yandex.ru</span></div>
-				<div class="email d-none d-md-block"><span class="white-text">transform.krr</span><span class="red-text">@gmail.com</span></div>
 			</div>
 		</div>
 		<div class="col-md-2 text-center">
 			<a class=" " href="index.html"><img class="logo-img" src="../img/logo.png" alt="Трансформъ Плюс"></a>
 		</div>
 		<div class="col-md-5 text-right">
-			<div class="text-center text-md-right">
+			<div class="text-center text-md-right p-4">
 				<div class="p-md-1 pt-4">
 					<a href="+79186884442"><span class="red-text">+7 (918)</span> <span class="white-text">688-44-42</span>
 			</a></div>
