--- a/assets/src/template/footer.html
+++ b/assets/src/template/footer.html
@@ -1,22 +1,21 @@
-<footer class="block-bg-color">
+<footer class="block-bg-color mt-1">
 	<div class="row">
-		<div class="col-md-4">
+		<div class="col-md-6">
 			
-				<a class="btn btn-outline-light w-100 m-2" href="">Внешняя отделка зданий</a>
-				<a class="btn btn-outline-light w-100 m-2" href="">Внутренняя отделка зданий</a>
-				<a class="btn btn-outline-light w-100 m-2" href="">Используемые материалы</a>
-				<a class="btn btn-outline-light w-100 m-2" href="">Примеры наших работ</a>
+				<a class="btn btn-outline-light  m-2" href="">Главная</a>
+				<a class="btn btn-outline-light  m-2" href="">О нас</a>
+				<a class="btn btn-outline-light  m-2" href="">Контакты</a>
 			
 		</div>
 		<div class="col-md-4">
 			
-				<a class="btn btn-outline-light w-100 m-2" href="">Примеры окон</a>
-				<a class="btn btn-outline-light w-100 m-2" href="">Примеры балюстрад</a>
-				<a class="btn btn-outline-light w-100 m-2" href="">Примеры негабаритных изделий рекламного назначения</a>
+
 		
 			
 		</div>
-		<div class="col-md-4"></div>
+		<div class="col-md-2">
+			<p>Copyright 2018</p>
+		</div>
 
 	</div>
 </footer>
