--- a/assets/src/template/aside.html
+++ b/assets/src/template/aside.html
@@ -1,33 +1,33 @@
 <aside class="text-left">
 	<h3 class="text-left">Примеры наших работ:</h3>
 	<div>
-		<figure>
+		<figure class="">
 			<figcaption></figcaption>
-			<img src="../img/examples/en5big-300x199.jpg" alt="" width="300" height="210">
+			<a href=""><img src="../img/examples/en5big-300x199.jpg" alt="" width="300" height="210"></a>
 		</figure>
 	</div>
 	<div>
 		<figure>
 			<figcaption></figcaption>
-			<img src="../img/examples/grand15big-300x225.jpg" alt="" width="300" height="210">
+			<a href=""><img src="../img/examples/grand15big-300x225.jpg" alt="" width="300" height="210"></a>
 		</figure>
 	</div>
 	<div>
 		<figure>
 			<figcaption></figcaption>
-			<img src="../img/examples/grand4big-300x225.jpg" alt="" width="300" height="210">
+			<a href=""><img src="../img/examples/grand4big-300x225.jpg" alt="" width="300" height="210"></a>
 		</figure>
 	</div>
 	<div>
 		<figure>
 			<figcaption></figcaption>
-			<img src="../img/examples/nn5big-300x199.jpg" alt="" width="300" height="210">
+			<a href=""><img src="../img/examples/nn5big-300x199.jpg" alt="" width="300" height="210"></a>
 		</figure>
 	</div>
 	<div c>
 		<figure>
 			<figcaption></figcaption>
-			<img src="../img/examples/%D1%83%D1%81%D1%82%D1%8C-2-300x225.jpg" alt="" width="300" height="210">
+			<a href=""><img src="../img/examples/%D1%83%D1%81%D1%82%D1%8C-2-300x225.jpg" alt="" width="300" height="210"></a>
 		</figure>
 	</div>
 </aside>
