--- a/assets/src/template/header.html
+++ b/assets/src/template/header.html
@@ -1,10 +1,10 @@
 <header class="block-bg-color">
 	<div class="row">
 		<div class="col-md-5">
-<div class="adress_and-email px-4">
+			<div class="adress_and-email px-4">
 				<a href="contacts.html">
 					<div class="adress m-3 pl-5 d-none d-md-block">
-				
+
 						<div class="city white-text">
 							Краснодар
 						</div>
@@ -23,23 +23,26 @@
 			<a class=" " href="index.html"><img class="logo-img" src="../img/logo.png" alt="Трансформъ Плюс"></a>
 		</div>
 		<div class="col-md-5 text-right">
-			<div class="text-center text-md-right p-4">
+			<div class="phnumbers text-center text-md-right p-4">
 				<div class="p-md-1 pt-4">
 					<a href="+79186884442"><span class="red-text">+7 (918)</span> <span class="white-text">688-44-42</span>
-			</a></div>
+			</a>
+				</div>
 				<div class="p-md-1 d-none d-md-block">
 					<a href="+78612980898"><span class="red-text">+7 (861) </span> <span class="white-text">298-08-98</span>
-			</a></div>
+			</a>
+				</div>
 				<div class="p-md-1 d-none d-md-block">
 					<a href="+78612980880"><span class="red-text">+7 (861)</span> <span class="white-text">298-08-80</span>
-			</a></div>
+			</a>
+				</div>
 				<div class="mobile-bitton-onmap d-inline-block d-md-none my-2"><a class="btn btn-danger" href="contacts.html">Мы на карте</a></div>
 			</div>
 
 		</div>
 		<div class="col-md-12">
-		//= nav.html
-			
+			//= nav.html
+
 		</div>
 
 	</div>
