--- a/assets/src/template/footer.html
+++ b/assets/src/template/footer.html
@@ -2,9 +2,9 @@
 	<div class="row">
 		<div class="col-md-6">
 			
-				<a class="btn btn-outline-light  m-2" href="">Главная</a>
-				<a class="btn btn-outline-light  m-2" href="">О нас</a>
-				<a class="btn btn-outline-light  m-2" href="">Контакты</a>
+				<a class="btn btn-outline-dark  m-2" href="">Главная</a>
+				<a class="btn btn-outline-dark  m-2" href="">О нас</a>
+				<a class="btn btn-outline-dark  m-2" href="">Контакты</a>
 			
 		</div>
 		<div class="col-md-4">
