--- a/assets/src/template/header.html
+++ b/assets/src/template/header.html
@@ -5,17 +5,17 @@
 				<a href="contacts.html">
 					<div class="adress m-3 pl-5 d-none d-md-block">
 
-						<div class="city white-text">
+						<div class="city text-color">
 							Краснодар
 						</div>
-						<div class="street white-text">
+						<div class="street text-color">
 							ул.Кожевенная 18
 						</div>
 					</div>
 				</a>
 				<div class="emails">
-					<div class="email d-none d-md-block"><span class="white-text">transform.krr</span><span class="red-text">@yandex.ru</span></div>
-					<div class="email d-none d-md-block"><span class="white-text">transform.krr</span><span class="red-text">@gmail.com</span></div>
+					<div class="email d-none d-md-block"><span class="text-color">transform.krr</span><span class="sec-text">@yandex.ru</span></div>
+					<div class="email d-none d-md-block"><span class="text-color">transform.krr</span><span class="sec-text">@gmail.com</span></div>
 				</div>
 			</div>
 		</div>
@@ -25,15 +25,15 @@
 		<div class="col-md-5 text-right">
 			<div class="phnumbers text-center text-md-right p-4">
 				<div class="p-md-1 pt-4">
-					<a href="+79186884442"><span class="red-text">+7 (918)</span> <span class="white-text">688-44-42</span>
+					<a href="+79186884442"><span class="sec-text">+7 (918)</span> <span class="text-color">688-44-42</span>
 			</a>
 				</div>
 				<div class="p-md-1 d-none d-md-block">
-					<a href="+78612980898"><span class="red-text">+7 (861) </span> <span class="white-text">298-08-98</span>
+					<a href="+78612980898"><span class="sec-text">+7 (861) </span> <span class="text-color">298-08-98</span>
 			</a>
 				</div>
 				<div class="p-md-1 d-none d-md-block">
-					<a href="+78612980880"><span class="red-text">+7 (861)</span> <span class="white-text">298-08-80</span>
+					<a href="+78612980880"><span class="sec-text">+7 (861)</span> <span class="text-color">298-08-80</span>
 			</a>
 				</div>
 				<div class="mobile-bitton-onmap d-inline-block d-md-none my-2"><a class="btn btn-danger" href="contacts.html">Мы на карте</a></div>
