--- a/assets/src/template/nav.html
+++ b/assets/src/template/nav.html
@@ -5,6 +5,9 @@
   </button>
 				<div class="collapse navbar-collapse" id="navbarText">
 					<ul class="navbar-nav mr-auto">
+					<li class="nav-item">
+							<a class="nav-link" href="index.html">Главная</a>
+						</li>
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Каталог</a>
 							<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
