--- a/assets/src/style/my.scss
+++ b/assets/src/style/my.scss
@@ -1,11 +1,10 @@
-
-$mainColor: rgba(253, 253, 253, 0.6);
-$secondColor: #7c6227;
-$textColor: #312c2c;
+$mainColor: rgba(25, 22, 22, 0.6);
+$secondColor: #ef2e26;
+$textColor: #fff;
 $secTextColor: #000;
 
-.text-color{
- 	color: $textColor;
+.text-color {
+	color: $textColor;
 }
 
 body {
@@ -48,7 +47,8 @@ header .adress {
 	background-repeat: no-repeat;
 	background-position: 3px 5px;
 }
-header .phnumbers{
+
+header .phnumbers {
 	font-weight: bold;
 	font-size: 18px;
 }
@@ -56,6 +56,7 @@ header .phnumbers{
 .sec-text {
 	color: $secondColor;
 }
+
 .sec-bg {
 	background: $secondColor;
 }
@@ -93,6 +94,7 @@ header .phnumbers{
 	height: 100%;
 	min-height: 240px;
 	background-position: 0 0;
+	background-size: cover;
 }
 
 .card-02 {
@@ -100,7 +102,7 @@ header .phnumbers{
 	background-repeat: no-repeat;
 	background-position: 0 0;
 	height: 240px;
-
+	background-size: cover;
 }
 
 .card-03 {
@@ -112,12 +114,14 @@ header .phnumbers{
 	background-repeat: no-repeat;
 	background-position: 0 0;
 	height: 240px;
+	background-size: cover;
 }
 
 .card-05 {
 
 	background-image: url(../img/doors-and-windows.jpg);
 	height: 240px;
+	background-size: cover;
 }
 
 .card-06 {
@@ -125,7 +129,7 @@ header .phnumbers{
 	background-repeat: no-repeat;
 	height: 100%;
 	min-height: 240px;
-	background-position: 0 0;
+	background-size: cover;
 }
 
 
