added social icons

--- a/assets/src/style/my.scss
+++ b/assets/src/style/my.scss
@@ -209,3 +209,17 @@ header .phnumbers {
 	padding-left: 15px;
 	padding-right: 15px;
 }
+footer .instagram{
+	margin: 5px;
+	width: 90px;
+	height: 90px;
+	background-image: url(../img/icons/3-social-network-logo-collection.png);
+	background-position: 260px 450px;
+}
+footer .vk{
+	margin: 5px;
+	width: 90px;
+	height: 90px;
+	background-image: url(../img/icons/3-social-network-logo-collection.png);
+	background-position: 260px 290px;
+}
