--- a/assets/src/template/footer.html
+++ b/assets/src/template/footer.html
@@ -1,17 +1,25 @@
 <footer class="block-bg-color mt-1">
 	<div class="row">
 		<div class="col-md-6">
-			
-				<a class="btn btn-outline-dark  m-2" href="">Главная</a>
-				<a class="btn btn-outline-dark  m-2" href="">О нас</a>
-				<a class="btn btn-outline-dark  m-2" href="">Контакты</a>
-			
+			<a class="footer-nav-item " href="index.html">Главная</a>
+			<a class="footer-nav-item " href="">О нас</a>
+			<a class="footer-nav-item " href="">Контакты</a>
 		</div>
 		<div class="col-md-4">
-			
 
-		
+	
+				<a href="https://vk.com/transformkrr">
+					<span class="vk d-inline-block"> 
+					</span>
+				</a>
 			
+				<a href="https://www.instagram.com/transformkrr/">
+					<span class="instagram d-inline-block">
+					</span>
+				</a>
+
+
+
 		</div>
 		<div class="col-md-2">
 			<p>Copyright 2018</p>
