--- a/assets/src/template/footer.html
+++ b/assets/src/template/footer.html
@@ -1,25 +1,21 @@
 <footer class="block-bg-color mt-1">
 	<div class="row">
 		<div class="col-md-6">
-			<a class="footer-nav-item " href="index.html">Главная</a>
-			<a class="footer-nav-item " href="">О нас</a>
-			<a class="footer-nav-item " href="">Контакты</a>
+			<div class="footer-nav">
+				<a class="footer-nav-item " href="index.html">Главная</a>
+				<a class="footer-nav-item " href="about.html">О нас</a>
+				<a class="footer-nav-item " href="contacts.html">Контакты</a>
+			</div>
 		</div>
 		<div class="col-md-4">
-
-	
-				<a href="https://vk.com/transformkrr">
+			<a href="https://vk.com/transformkrr">
 					<span class="vk d-inline-block"> 
 					</span>
 				</a>
-			
-				<a href="https://www.instagram.com/transformkrr/">
+			<a href="https://www.instagram.com/transformkrr/">
 					<span class="instagram d-inline-block">
 					</span>
 				</a>
-
-
-
 		</div>
 		<div class="col-md-2">
 			<p>Copyright 2018</p>
