--- a/assets/src/template/header.html
+++ b/assets/src/template/header.html
@@ -36,7 +36,7 @@
 					<a href="+78612980880"><span class="sec-text">+7 (861)</span> <span class="text-color">298-08-80</span>
 			</a>
 				</div>
-				<div class="mobile-bitton-onmap d-inline-block d-md-none my-2"><a class="btn btn-danger" href="contacts.html">Мы на карте</a></div>
+				<div class="mobile-bitton-onmap d-inline-block d-md-none my-2"><a class="btn sec-bg text-color" href="contacts.html">Мы на карте</a></div>
 			</div>
 
 		</div>
