--- a/assets/src/template/aside.html
+++ b/assets/src/template/aside.html
@@ -1,4 +1,4 @@
-<aside class="text-center block-bg-color text-color">
+<aside class="text-center block-bg-color text-color p-1 my-1">
 	<h3>Примеры наших работ:</h3>
 	<div>
 		<figure class="">
