--- a/assets/src/style/variables.scss
+++ b/assets/src/style/variables.scss
@@ -1,5 +1,8 @@
-$mainColor: rgba(25, 22, 22, 0.6);
-$secondColor: #ef2e26;
-$textColor: #fff;
+//My variables:
+$mainColor: rgba(222, 221, 216, 0.6);
+$secondColor: #c48c3f;
+$textColor: #2f2f2f;
 $secTextColor: #000;
-$dark: #fff;
+
+//Bootstrap4 variables rewrite
+$white: $textColor;
