--- a/assets/src/style/variables.scss
+++ b/assets/src/style/variables.scss
@@ -1,8 +1,9 @@
 //My variables:
-$mainColor: rgba(222, 221, 216, 0.6);
+$mainColor: rgba(222, 221, 216, 0.87);
 $secondColor: #c48c3f;
 $textColor: #2f2f2f;
 $secTextColor: #000;
+$border
 
 //Bootstrap4 variables rewrite
-$white: $textColor;
+//$white: $textColor;
