--- a/assets/src/template/header.html
+++ b/assets/src/template/header.html
@@ -19,8 +19,8 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-md-2 text-center">
-			<a class=" " href="index.html"><img class="logo-img" src="../img/logo.png" alt="Трансформъ Плюс"></a>
+		<div class="col-md-2 p-0">
+			<a class="d-block text-center" href="index.html"><img class="logo-img" src="../img/logo2.png" alt="Трансформъ Плюс"></a>
 		</div>
 		<div class="col-md-5 text-right">
 			<div class="phnumbers text-center text-md-right p-4">
