--- a/assets/src/template/nav.html
+++ b/assets/src/template/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark">
+<nav class="navbar navbar-expand-lg navbar-light">
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -8,7 +8,7 @@
 				<a class="nav-link" href="index.html">Главная</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="about.html">О компании</a>
+				<a class="nav-link" href="about.html"> О&nbsp;нас</a>
 			</li>
 			<li class="nav-item dropdown">
 				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Каталог</a>
@@ -25,9 +25,9 @@
           Фотографии наших работ</a>
 				<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 					<a class="dropdown-item" href="examples_of_our_artwork.html">Примеры наших работ</a>
-					<a class="dropdown-item" href="examples_of_windows.html">Примеры окон</a>
-					<a class="dropdown-item" href="examples_of_balustrades.html">Примеры балюстрад</a>
-					<a class="dropdown-item" href="examples_of_promotional_products.html">Примеры негабаритных изделий рекламного назначения</a>
+					<a class="dropdown-item" href="examples_of_windows.html">Окна</a>
+					<a class="dropdown-item" href="examples_of_balustrades.html">Балюстрады</a>
+					<a class="dropdown-item" href="examples_of_promotional_products.html">Изделия рекламного назначения</a>
 				</div>
 			</li>
 			<li class="nav-item">
