--- a/assets/src/style/my.scss
+++ b/assets/src/style/my.scss
@@ -11,6 +11,11 @@ body {
 	color: $secTextColor;
 }
 
+h1 {
+	font-size: 1.6em;
+	text-align: center;
+}
+
 a {
 	text-decoration: none;
 	color: #000;
@@ -21,20 +26,27 @@ a:hover {
 	color: #000;
 }
 
+.about_us p,
+.about_materials p,
+.content-ex p,
+.internal-finished p {
+	text-indent: 1em;
+}
+
 .container-fluid {
 	background-image: url(../img/bg-img2.png);
 }
 
 header .city {
-	font-size: 21px;
+	font-size: 1.3em;
 }
 
 header .street {
-	font-size: 21px;
+	font-size: 1.3em;
 }
 
 header .email {
-	font-size: 16px;
+	font-size: 1em;
 }
 
 header .adress {
@@ -45,7 +57,7 @@ header .adress {
 
 header .phnumbers {
 	font-weight: bold;
-	font-size: 18px;
+	font-size: 1.2em;
 }
 
 .sec-text {
@@ -68,7 +80,8 @@ header .phnumbers {
 }
 
 .nav-item {
-	font-size: 20px;
+	font-size: 1.3em;
+	;
 	text-align: center;
 }
 
@@ -77,7 +90,7 @@ header .phnumbers {
 }
 
 .phone-number {
-	font-size: 20px;
+	font-size: 1.5em;
 	font-weight: bold;
 	display: inline-block;
 	min-width: 200px;
@@ -234,7 +247,7 @@ footer .footer-nav-item {
 	border-width: 1px;
 	min-width: 140px;
 	color: $textColor;
-	font-size: 20px;
+	font-size: 1.3em;
 	padding: 10px;
 	margin: 5px;
 	text-align: center;
@@ -242,4 +255,8 @@ footer .footer-nav-item {
 
 footer .footer-nav-item:hover {
 	background-color: $mainColor;
+}
+
+.wrapper img{
+	max-width: 100%;
 }
