--- a/assets/src/style/my.scss
+++ b/assets/src/style/my.scss
@@ -155,7 +155,7 @@ header .phnumbers {
 .wrapper-blackout > * {
 	color: $textColor;
 	padding: 10px;
-	background-color: $mainColor;
+	background-color: $BgForText;
 }
 
 .wrapper-blackout > *:hover {
