--- a/assets/src/style/variables.scss
+++ b/assets/src/style/variables.scss
@@ -1,5 +1,6 @@
 //My variables:
 $mainColor: rgba(222, 221, 216, 0.87);
+$BgForText: rgba(222, 221, 216, 0.65);
 $secondColor: #c48c3f;
 $textColor: #2f2f2f;
 $secTextColor: #000;
