'start_refactoring_with_BEM'

--- a/assets/src/style/main.scss
+++ b/assets/src/style/main.scss
@@ -27,3 +27,8 @@
  
 // Подключение своих SCSS файлов
 @import "my";
+@import "header";
+@import "nav";
+@import "card";
+@import "footer";
+@import "card-ex";
