--- a/assets/src/style/header.scss
+++ b/assets/src/style/header.scss
@@ -1,33 +1,30 @@
-header .city {
+
+.header__city {
 	font-size: 1.3em;
 }
 
-header .street {
+.header__street {
 	font-size: 1.3em;
 }
 
-header .email {
+.header__email {
 	font-size: 1em;
 }
 
-header .adress {
+.header__adress {
 	background-image: url(../img/iconRedContacts.png);
 	background-repeat: no-repeat;
 	background-position: 3px 5px;
 }
 
-header .phnumbers {
+.header__phnumbers {
 	font-weight: bold;
 	font-size: 1.2em;
 }
-.logo-img {
+
+.header__logo {
 	height: 180px;
 	margin-top: -7px;
 	margin-bottom: -24px;
 }
-.phone-number {
-	font-size: 1.5em;
-	font-weight: bold;
-	display: inline-block;
-	min-width: 200px;
-}
+
