--- a/assets/src/template/footer.html
+++ b/assets/src/template/footer.html
@@ -1,23 +1,23 @@
-<footer class="block-bg-color mt-1">
+<footer class="footer">
 	<div class="row">
 		<div class="col-md-7">
-			<div class="footer-nav">
-				<a class="footer-nav-item " href="index.html">Главная</a>
-				<a class="footer-nav-item " href="about.html">О нас</a>
-				<a class="footer-nav-item " href="contacts.html">Контакты</a>
+			<div class="footer__nav">
+				<a class="footer__nav-item " href="index.html">Главная</a>
+				<a class="footer__nav-item " href="about.html">О нас</a>
+				<a class="footer__nav-item " href="contacts.html">Контакты</a>
 			</div>
 		</div>
 		<div class="col-md-3">
 			<a href="https://vk.com/transformkrr">
-					<span class="vk d-inline-block"> 
+					<span class="footer__vk"> 
 					</span>
 				</a>
 			<a href="https://www.instagram.com/transformkrr/">
-					<span class="instagram d-inline-block">
+					<span class="footer__instagram">
 					</span>
 				</a>
 		</div>
-		<div class="col-md-2">
+		<div class="footer__copyright col-md-2">
 			<p>Copyright 2018</p>
 		</div>
 
