--- a/assets/src/template/header.html
+++ b/assets/src/template/header.html
@@ -1,29 +1,29 @@
-<header class="block-bg-color">
+<header class="header block-bg-color">
 	<div class="row">
 		<div class="col-md-5">
-			<div class="adress_and-email px-4">
+			<div class="wrapper px-4">
 				<a href="contacts.html">
-					<div class="adress m-3 pl-5 d-none d-md-block">
+					<div class="header__adress m-3 pl-5 d-none d-md-block">
 
-						<div class="city text-color">
+						<div class="header__city text-color">
 							Краснодар
 						</div>
-						<div class="street text-color">
+						<div class="header__street text-color">
 							ул.Кожевенная 18
 						</div>
 					</div>
 				</a>
-				<div class="emails">
-					<div class="email d-none d-md-block"><span class="text-color">transform.krr</span><span class="sec-text">@yandex.ru</span></div>
-					<div class="email d-none d-md-block"><span class="text-color">transform.krr</span><span class="sec-text">@gmail.com</span></div>
+				<div class="wrapper">
+					<div class="header__email d-none d-md-block"><span class="text-color">transform.krr</span><span class="sec-text">@yandex.ru</span></div>
+					<div class="header__email d-none d-md-block"><span class="text-color">transform.krr</span><span class="sec-text">@gmail.com</span></div>
 				</div>
 			</div>
 		</div>
 		<div class="col-md-2 p-0">
-			<a class="d-block text-center" href="index.html"><img class="logo-img" src="../img/logo2.png" alt="Трансформъ Плюс"></a>
+			<a class="d-block text-center" href="index.html"><img class="header__logo" src="../img/logo2.png" alt="Трансформъ Плюс"></a>
 		</div>
 		<div class="col-md-5 text-right">
-			<div class="phnumbers text-center text-md-right p-4">
+			<div class="header__phnumbers text-center text-md-right p-4">
 				<div class="p-md-1 pt-4">
 					<a href="+79186884442"><span class="sec-text">+7 (918)</span> <span class="text-color">688-44-42</span>
 			</a>
