--- a/assets/src/style/card.scss
+++ b/assets/src/style/card.scss
@@ -1,3 +1,10 @@
+.card {
+	min-height: 240px;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: 0 0;
+}
+
 .wrapper-blackout {
 	width: 100%;
 	height: 100%;
@@ -6,6 +13,8 @@
 
 .wrapper-blackout:hover {
 	background-color: $mainColor;
+	text-decoration: none;
+	color: $textColor;
 }
 
 .wrapper-blackout > * {
@@ -14,52 +23,40 @@
 	background-color: $BgForText;
 }
 
-.wrapper-blackout > *:hover {
-	text-decoration: none;
-	color: $textColor;
 
-}
 
-.card-01 {
+.card--backgroundimg-01 {
 	background-image: url(../img/external.jpg);
-	background-repeat: no-repeat;
 	height: 100%;
-	min-height: 240px;
-	background-position: 0 0;
-	background-size: cover;
+
 }
 
-.card-02 {
+.card--backgroundimg-02 {
 	background-image: url(../img/balustrades.jpg);
-	background-repeat: no-repeat;
-	background-position: 0 0;
 	height: 240px;
-	background-size: cover;
+
 }
 
-.card-03 {
+.card--backgroundimg-03 {
 	height: 240px;
 }
 
-.card-04 {
+.card--backgroundimg-04 {
 	background-image: url(../img/internal-01.jpg);
-	background-repeat: no-repeat;
-	background-position: 0 0;
 	height: 240px;
-	background-size: cover;
+
 }
 
-.card-05 {
+.card--backgroundimg-05 {
 
 	background-image: url(../img/doors-and-windows.jpg);
 	height: 240px;
-	background-size: cover;
+
 }
 
-.card-06 {
+.card--backgroundimg-06 {
 	background-image: url(../img/marketing.jpg);
-	background-repeat: no-repeat;
 	height: 100%;
 	min-height: 240px;
-	background-size: cover;
+
 }
