--- a/assets/src/template/header.html
+++ b/assets/src/template/header.html
@@ -1,7 +1,7 @@
 <header class="header block-bg-color">
 	<div class="row">
 		<div class="col-md-5">
-			<div class="wrapper px-4">
+			<div class="header--leftblock px-4">
 				<a href="contacts.html">
 					<div class="header__adress m-3 pl-5 d-none d-md-block">
 
@@ -22,19 +22,16 @@
 		<div class="col-md-2 p-0">
 			<a class="d-block text-center" href="index.html"><img class="header__logo" src="../img/logo2.png" alt="Трансформъ Плюс"></a>
 		</div>
-		<div class="col-md-5 text-right">
-			<div class="header__phnumbers text-center text-md-right p-4">
+		<div class="col-md-5">
+			<div class="header__phnumbers p-4">
 				<div class="p-md-1 pt-4">
-					<a href="+79186884442"><span class="sec-text">+7 (918)</span> <span class="text-color">688-44-42</span>
-			</a>
+					<a href="+79186884442"><span class="sec-text">+7 (918)</span> <span class="text-color">688-44-42</span></a>
 				</div>
 				<div class="p-md-1 d-none d-md-block">
-					<a href="+78612980898"><span class="sec-text">+7 (861) </span> <span class="text-color">298-08-98</span>
-			</a>
+					<a href="+78612980898"><span class="sec-text">+7 (861) </span> <span class="text-color">298-08-98</span></a>
 				</div>
 				<div class="p-md-1 d-none d-md-block">
-					<a href="+78612980880"><span class="sec-text">+7 (861)</span> <span class="text-color">298-08-80</span>
-			</a>
+					<a href="+78612980880"><span class="sec-text">+7 (861)</span> <span class="text-color">298-08-80</span></a>
 				</div>
 				<div class="mobile-bitton-onmap d-inline-block d-md-none my-2"><a class="btn sec-bg text-color" href="contacts.html">Мы на карте</a></div>
 			</div>
