--- a/assets/src/style/my.scss
+++ b/assets/src/style/my.scss
@@ -4,9 +4,7 @@
 
 body {
 	max-width: 1920px;
-	background-color: #e0dccb; //	font-family: 'Alice', serif;
-	//	font-family: 'Prata', serif;
-	//	font-family: 'Alegreya SC', serif;
+	background-color: #e0dccb; 
 	font-family: 'Ledger', serif;
 	color: $secTextColor;
 }
