--- a/assets/src/template/footer.html
+++ b/assets/src/template/footer.html
@@ -8,13 +8,9 @@
 			</div>
 		</div>
 		<div class="col-md-3">
-			<a href="https://vk.com/transformkrr">
-					<span class="footer__vk"> 
-					</span>
+			<a class="footer__vk" href="https://vk.com/transformkrr">
 				</a>
-			<a href="https://www.instagram.com/transformkrr/">
-					<span class="footer__instagram">
-					</span>
+			<a class="footer__instagram" href="https://www.instagram.com/transformkrr/">
 				</a>
 		</div>
 		<div class="footer__copyright col-md-2">
