--- a/assets/src/template/head.html
+++ b/assets/src/template/head.html
@@ -1,4 +1,4 @@
-	<meta charset="UTF-8">
-	<link rel="stylesheet" href="css/main.css">
-	<link href="https://fonts.googleapis.com/css?family=Alegreya+SC|Alice|Ledger|Prata" rel="stylesheet">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8">
+<link rel="preload" href="https://fonts.gstatic.com/s/ledger/v5/j8_q6-HK1L3if_sBmMrxLTA.woff2" as="font">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="css/main.css">
