--- a/assets/src/template/aside.html
+++ b/assets/src/template/aside.html
@@ -2,32 +2,32 @@
 	<h3>Примеры наших работ:</h3>
 	<div>
 		<figure class="">
-			<figcaption>Lorem ipsum dolor sit amet</figcaption>
-			<a href=""><img class="img-fluid" src="../img/examples/en5big-300x199.jpg" alt=""></a>
+			<figcaption>   </figcaption>
+			<a href="examples_of_our_artwork.html"><img class="img-fluid" src="../img/examples/en5big-300x199.jpg" alt=""></a>
 		</figure>
 	</div>
 	<div>
 		<figure>
-			<figcaption>Lorem ipsum dolor sit amet</figcaption>
-			<a href=""><img class="img-fluid" src="../img/examples/grand15big-300x225.jpg" alt=""></a>
+			<figcaption>   </figcaption>
+			<a href="examples_of_our_artwork.html"><img class="img-fluid" src="../img/examples/grand15big-300x225.jpg" alt=""></a>
 		</figure>
 	</div>
 	<div>
 		<figure>
-			<figcaption>Lorem ipsum dolor sit amet</figcaption>
-			<a href=""><img class="img-fluid" src="../img/examples/grand4big-300x225.jpg" alt=""></a>
+			<figcaption>   </figcaption>
+			<a href="examples_of_our_artwork.html"><img class="img-fluid" src="../img/examples/grand4big-300x225.jpg" alt=""></a>
 		</figure>
 	</div>
 	<div>
 		<figure>
-			<figcaption>Lorem ipsum dolor sit amet</figcaption>
-			<a href=""><img class="img-fluid" src="../img/examples/nn5big-300x199.jpg" alt=""></a>
+			<figcaption>   </figcaption>
+			<a href="examples_of_our_artwork.html"><img class="img-fluid" src="../img/examples/nn5big-300x199.jpg" alt=""></a>
 		</figure>
 	</div>
 	<div c>
 		<figure>
-			<figcaption>Lorem ipsum dolor sit amet</figcaption>
-			<a href=""><img class="img-fluid" src="../img/examples/%D1%83%D1%81%D1%82%D1%8C-2-300x225.jpg" alt=""></a>
+			<figcaption>   </figcaption>
+			<a href="examples_of_our_artwork.html"><img class="img-fluid" src="../img/examples/%D1%83%D1%81%D1%82%D1%8C-2-300x225.jpg" alt=""></a>
 		</figure>
 	</div>
 </aside>
