'validation_html_finished'

--- a/assets/src/template/aside.html
+++ b/assets/src/template/aside.html
@@ -24,7 +24,7 @@
 			<a href="examples_of_our_artwork.html"><img class="img-fluid" src="../img/examples/nn5big-300x199.jpg" alt=""></a>
 		</figure>
 	</div>
-	<div c>
+	<div>
 		<figure>
 			<figcaption>   </figcaption>
 			<a href="examples_of_our_artwork.html"><img class="img-fluid" src="../img/examples/%D1%83%D1%81%D1%82%D1%8C-2-300x225.jpg" alt=""></a>
