--- a/assets/src/template/nav.html
+++ b/assets/src/template/nav.html
@@ -11,8 +11,8 @@
 				<a class="nav-link" href="about.html"> О&nbsp;нас</a>
 			</li>
 			<li class="nav-item dropdown">
-				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Каталог</a>
-				<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Каталог</a>
+				<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink1">
 					<a class="dropdown-item" href="external_finish.html">Внешняя отделка зданий</a>
 					<a class="dropdown-item" href="internal_finish.html">Внутренняя отделка помещений</a>
 				</div>
@@ -21,9 +21,9 @@
 				<a class="nav-link" href="using_materials.html">Используемые материалы</a>
 			</li>
 			<li class="nav-item dropdown">
-				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Фотографии наших работ</a>
-				<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+				<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink2">
 					<a class="dropdown-item" href="examples_of_our_artwork.html">Примеры наших работ</a>
 					<a class="dropdown-item" href="examples_of_windows.html">Окна</a>
 					<a class="dropdown-item" href="examples_of_balustrades.html">Балюстрады</a>
