'renamed_files_*.html,_added_.htaccess_robots.txt_sitemap.xml'

--- a/assets/src/template/nav.html
+++ b/assets/src/template/nav.html
@@ -5,33 +5,33 @@
 	<div class="collapse navbar-collapse" id="navbarText">
 		<ul class="navbar-nav mr-auto">
 			<li class="nav-item">
-				<a class="nav-link" href="index.html">Главная</a>
+				<a class="nav-link" href="/">Главная</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="about.html"> О&nbsp;нас</a>
+				<a class="nav-link" href="about"> О&nbsp;нас</a>
 			</li>
 			<li class="nav-item dropdown">
 				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Каталог</a>
 				<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink1">
-					<a class="dropdown-item" href="external_finish.html">Внешняя отделка зданий</a>
-					<a class="dropdown-item" href="internal_finish.html">Внутренняя отделка помещений</a>
+					<a class="dropdown-item" href="external-finish">Внешняя отделка зданий</a>
+					<a class="dropdown-item" href="internal-finish">Внутренняя отделка помещений</a>
 				</div>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="using_materials.html">Используемые материалы</a>
+				<a class="nav-link" href="using-materials">Используемые материалы</a>
 			</li>
 			<li class="nav-item dropdown">
 				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Фотографии наших работ</a>
 				<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink2">
-					<a class="dropdown-item" href="examples_of_our_artwork.html">Примеры наших работ</a>
-					<a class="dropdown-item" href="examples_of_windows.html">Окна</a>
-					<a class="dropdown-item" href="examples_of_balustrades.html">Балюстрады</a>
-					<a class="dropdown-item" href="examples_of_promotional_products.html">Изделия рекламного назначения</a>
+					<a class="dropdown-item" href="examples-of-our-artwork">Примеры наших работ</a>
+					<a class="dropdown-item" href="examples-of-windows">Окна</a>
+					<a class="dropdown-item" href="examples-of-balustrades">Балюстрады</a>
+					<a class="dropdown-item" href="examples-of-promotional-products">Изделия рекламного назначения</a>
 				</div>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="contacts.html">Контакты</a>
+				<a class="nav-link" href="contacts">Контакты</a>
 			</li>
 		</ul>
 	</div>
