--- a/assets/src/template/header.html
+++ b/assets/src/template/header.html
@@ -20,7 +20,7 @@
 			</div>
 		</div>
 		<div class="col-md-2 p-0">
-			<a class="d-block text-center" href="index.html"><img class="header__logo" src="../img/logo2.png" alt="Трансформъ Плюс"></a>
+			<a class="d-block text-center" href="/"><img class="header__logo" src="../img/logo2.png" alt="Трансформъ Плюс"></a>
 		</div>
 		<div class="col-md-5">
 			<div class="header__phnumbers p-4">
