'delete_all_.html'

--- a/assets/src/template/header.html
+++ b/assets/src/template/header.html
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-md-5">
 			<div class="header--leftblock px-4">
-				<a href="contacts.html">
+				<a href="contacts">
 					<div class="header__adress m-3 pl-5 d-none d-md-block">
 
 						<div class="header__city text-color">
@@ -33,7 +33,7 @@
 				<div class="p-md-1 d-none d-md-block">
 					<a href="+78612980880"><span class="sec-text">+7 (861)</span> <span class="text-color">298-08-80</span></a>
 				</div>
-				<div class="mobile-bitton-onmap d-inline-block d-md-none my-2"><a class="btn sec-bg text-color" href="contacts.html">Мы на карте</a></div>
+				<div class="mobile-bitton-onmap d-inline-block d-md-none my-2"><a class="btn sec-bg text-color" href="contacts">Мы на карте</a></div>
 			</div>
 
 		</div>
