--- a/assets/src/template/footer.html
+++ b/assets/src/template/footer.html
@@ -2,9 +2,9 @@
 	<div class="row">
 		<div class="col-md-7">
 			<div class="footer__nav">
-				<a class="footer__nav-item " href="index.html">Главная</a>
-				<a class="footer__nav-item " href="about.html">О нас</a>
-				<a class="footer__nav-item " href="contacts.html">Контакты</a>
+				<a class="footer__nav-item " href="index">Главная</a>
+				<a class="footer__nav-item " href="about">О нас</a>
+				<a class="footer__nav-item " href="contacts">Контакты</a>
 			</div>
 		</div>
 		<div class="col-md-3">
