--- a/assets/src/template/header.html
+++ b/assets/src/template/header.html
@@ -25,13 +25,13 @@
 		<div class="col-md-5">
 			<div class="header__phnumbers p-4">
 				<div class="p-md-1 pt-4">
-					<a href="+79186884442"><span class="sec-text">+7 (918)</span> <span class="text-color">688-44-42</span></a>
+					<a href="tel:+79186884442"><span class="sec-text">+7 (918)</span> <span class="text-color">688-44-42</span></a>
 				</div>
 				<div class="p-md-1 d-none d-md-block">
-					<a href="+78612980898"><span class="sec-text">+7 (861) </span> <span class="text-color">298-08-98</span></a>
+					<a href="tel:+78612980898"><span class="sec-text">+7 (861) </span> <span class="text-color">298-08-98</span></a>
 				</div>
 				<div class="p-md-1 d-none d-md-block">
-					<a href="+78612980880"><span class="sec-text">+7 (861)</span> <span class="text-color">298-08-80</span></a>
+					<a href="tel:+78612980880"><span class="sec-text">+7 (861)</span> <span class="text-color">298-08-80</span></a>
 				</div>
 				<div class="mobile-bitton-onmap d-inline-block d-md-none my-2"><a class="btn sec-bg text-color" href="contacts">Мы на карте</a></div>
 			</div>
